# Q4-Hackhthon-II

./: README.md  RENDER_DEPLOYMENT_GUIDE.md  package-lock.json  render.yaml
Hackhthon-II/phase-I/todo-cli/: .gitignore  CLAUDE.md  README.md  constitution.md  pyproject.toml
Hackhthon-II/phase-I/todo-cli/.github/workflows/: claude-contributions.yml
Hackhthon-II/phase-I/todo-cli/specs/: spec_template.md
Hackhthon-II/phase-I/todo-cli/specs/history/: 01_add_task.md  02_view_tasks.md  03_update_task.md  04_delete_task.md  05_mark_complete.md  06_ui_enhancements.md
Hackhthon-II/phase-II/: .gitignore  BETTER_AUTH_SETUP.md  DEPLOYMENT.md  TESTING_AUTH.md
Hackhthon-II/phase-II/.specify/memory/: constitution.md
Hackhthon-II/phase-II/backend/: .env.example  README.md  render.yaml  requirements.txt
Hackhthon-II/phase-II/backend/alembic/: env.py
Hackhthon-II/phase-II/backend/src/: db.py  main.py
Hackhthon-II/phase-II/frontend/: .env.example  .env.local.example  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
Hackhthon-II/phase-II/frontend/src/: middleware.ts
backend/: README.md  vercel.json
backend/api/: index.py
backend/src/api/: dependencies.py
backend/src/api/dependencies/: auth.py
backend/src/api/routes/: tasks.py
backend/src/db/: session.py
backend/src/models/: task.py
backend/src/services/: mcp_server.py
frontend/: README.md  package.json
frontend/src/components/auth/: LogoutButton.tsx
phase-I/todo-cli/src/: main.py
phase-II/backend/: .env.example  .vercelignore  README.md  render.yaml  requirements.txt  test_signup.py
phase-II/backend/alembic/: env.py
phase-II/backend/src/: main.py
phase-II/backend/src/api/: security.py
phase-II/backend/src/db/: __init__.py  session.py
phase-II/backend/src/models/: __init__.py  user.py
phase-II/backend/src/services/: auth.py  task.py
phase-II/backend/src/utils/: __init__.py  logging_config.py
phase-II/frontend/: package-lock.json
phase-II/frontend/src/: middleware.ts
phase-III/: CLAUDE.md  T043_IMPLEMENTATION_SUMMARY.md  TASK_LIST_FORMATTING_GUIDE.md
phase-III/backend/: .env.example  README.md  T025_COMPLETION_SUMMARY.md  T032_COMPLETION_SUMMARY.md  T042_COMPLETION_SUMMARY.md  T083_T085_COMPLETION_SUMMARY.md  TASK_T007_COMPLETION.md  alembic.ini  pyproject.toml  requirements.txt  test_alembic_setup.py  verify_adapter.py  verify_adapter_simple.py  verify_performance_optimizations.py
phase-III/backend/alembic/: README.md  __init__.py  env.py  script.py.mako
phase-III/backend/alembic/versions/: 20260201_initial_schema.py
phase-III/backend/docs/: LOGGING.md  LOGGING_IMPLEMENTATION.md  LOGGING_QUICK_START.md  PERFORMANCE_OPTIMIZATIONS.md  SECURITY_HARDENING.md  adapter_architecture.txt  chat_helpers_usage.md  mcp_openai_adapter.md
phase-III/backend/docs/mcp_tools/: add_task_usage.md
phase-III/backend/scripts/: init_db.py
phase-III/backend/src/: __init__.py  main.py  schemas.py
phase-III/backend/src/api/: __init__.py  auth.py  chat.py  chat.py.backup  deps.py
phase-III/backend/src/api/routes/: __init__.py  chat.py
phase-III/backend/src/db/: __init__.py  init_db.py  session.py
phase-III/backend/src/mcp_tools/: __init__.py  add_task.py  base.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
phase-III/backend/src/models/: __init__.py  conversation.py  message.py  models.py  task.py  user.py
phase-III/backend/src/services/: __init__.py  agent.py  agent.py.backup  conversation.py  mcp_openai_adapter.py
phase-III/backend/src/utils/: __init__.py
phase-III/backend/tests/: __init__.py  conftest.py  test_add_task_structure.py  test_chat_helpers.py  test_list_tasks_basic.py  test_logging_demo.py  test_performance_optimizations.py
phase-III/backend/tests/contract/: __init__.py
phase-III/backend/tests/integration/: QUICKSTART.md  README.md  __init__.py  conftest.py  test_conversation_state.py
phase-III/backend/tests/unit/: __init__.py  test_add_task_validation.py  test_mcp_openai_adapter.py  test_task_list_formatting.py
phase-III/frontend/: .env.example  .env.local.example  .env.production  .prettierignore  README.md  eslint.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
phase-III/specs/001-todo-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-III/specs/002-mcp-tools/: spec.md
phase-III/specs/005-conversation-flow/: quickstart.md  spec.md  tasks.md
phase-iv/: .gitignore
phase-iv/backend/: .env.example  Dockerfile  alembic.ini  render.yaml
phase-iv/backend/src/: main.py
phase-iv/frontend/: .env.production  AUTHENTICATION_DEBUG_REPORT.md  package-lock.json  package.json  tsconfig.json
phase-iv/specs/004-database-schema/: spec.md
phase-iv/todo-chatbot/: values.yaml
phase-iv/todo-chatbot/templates/: NOTES.txt  service.yaml
phase-v/: DEPLOYMENT_GUIDE.md  DIGITALOCEAN_DEPLOYMENT.md  FRONTEND_PHASEV_TODO.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  deploy-do.sh  package-lock.json
phase-v/.github/workflows/: build.yml  deploy.yml  test.yml
phase-v/backend/: .dockerignore  requirements.txt
phase-v/backend/docs/: api.md
phase-v/backend/src/: main.py  schemas.py
phase-v/frontend/: .dockerignore  .env.example  Dockerfile  next.config.js  package-lock.json  package.json  test-cors.sh
phase-v/infrastructure/docker/: docker-compose.yml  kafka-topics.yaml
phase-v/infrastructure/scripts/: setup-dapr.sh  setup-minikube.sh
phase-v/infrastructure/tests/: test_local_e2e.sh  test_minikube.sh  test_monitoring.sh  test_production.sh  test_ssl.sh
phase-v/k8s/: ingress-fixed.yaml  ingress.yaml
phase-v/specs/001-agent-behavior/: spec.md
phase-v/specs/003-chat-api/: spec.md
phase-v/specs/005-conversation-flow/: plan.md
phase-v/specs/006-advanced-cloud-deployment/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
phase-v/todo-chatbot/: Chart.yaml
phase-v/todo-chatbot/templates/: deployment.yaml
(+211 files in other folders)
