[project]
name = "todo-ai-chatbot"
version = "0.1.0"
description = "Todo AI Chatbot backend with FastAPI, SQLModel, and OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Todo AI Chatbot Team" }
]
keywords = ["fastapi", "sqlmodel", "openai", "agents", "mcp", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Core web framework
    "fastapi>=0.104.0",

    # Database ORM and validation
    "sqlmodel==0.0.14",
    "pydantic>=2.0.0",

    # Async database driver for PostgreSQL
    "asyncpg>=0.29.0",

    # Synchronous database driver (for migrations)
    "psycopg[binary]>=3.1.0",

    # ASGI server
    "uvicorn[standard]>=0.24.0",

    # Environment configuration
    "python-dotenv>=1.0.0",

    # Database migrations
    "alembic>=1.12.0",

    # OpenAI Agents SDK
    "openai>=1.0.0",
    "openai-agents>=0.1.0",

    # Official MCP SDK
    "mcp>=0.1.0",

    # Security: Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    # Testing framework with async support
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # For testing FastAPI endpoints
    "aiosqlite>=0.19.0",  # For in-memory SQLite database in integration tests
    "pytest-cov>=4.1.0",  # Coverage reporting
]

[project.urls]
Homepage = "https://github.com/yourorg/todo-ai-chatbot"
Repository = "https://github.com/yourorg/todo-ai-chatbot"
Documentation = "https://github.com/yourorg/todo-ai-chatbot/docs"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Test discovery patterns
[tool.pytest]
addopts = [
    "-v",                    # verbose output
    "--strict-markers",      # error on unknown markers
    "--tb=short",            # shorter traceback format
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]

# Black code formatting (optional but recommended)
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | \.eggs
    | \.tox
    | build
    | dist
)/
'''

# isort import sorting (optional but recommended)
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["app"]

# mypy type checking (optional but recommended)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pdm]
# If using PDM as package manager
distribution = true
